--- a/index.html
+++ b/index.html
@@ -547,16 +547,24 @@
                 </ol>
               </div>
               <div class="col">
-                <p>Formatting Options</p>
-                <ul style="list-style-type: square">
-                  <li><strong>CTRL + B</strong>: &nbsp; Bold</li>
-                  <li><strong>CTRL + I</strong>: &nbsp;&nbsp; Italic</li>
-                  <li><strong>CTRL + U</strong>: &nbsp; Underline</li>
-                  <li><strong>CTRL + L</strong>: &nbsp; Left Align</li>
-                  <li><strong>CTRL + C</strong>: &nbsp; Center Align</li>
-                  <li><strong>CTRL + R</strong>: &nbsp; Right Align</li>
-                  <li><strong>CTRL + J</strong>: &nbsp; Justify Align</li>
-                </ul>
+                <h4 style="margin-bottom: 5px;">Formatting Keyboard Shortcut Options</h4>
+                <div class="row middle">
+                  <div class="col">
+                    <ul style="list-style-type: square">
+                      <li><strong>CTRL + L</strong>: &nbsp; Left Align</li>
+                      <li><strong>CTRL + C</strong>: &nbsp; Center Align</li>
+                      <li><strong>CTRL + R</strong>: &nbsp; Right Align</li>
+                      <li><strong>CTRL + J</strong>: &nbsp; Justify Align</li>
+                    </ul>
+                  </div>
+                  <div class="col">
+                    <ul style="list-style-type: square">
+                      <li><strong>CTRL + B</strong>: &nbsp; Bold</li>
+                      <li><strong>CTRL + I</strong>: &nbsp;&nbsp; Italic</li>
+                      <li><strong>CTRL + U</strong>: &nbsp; Underline</li>
+                    </ul>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
