Added more info to viewing analytics

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             <ol>
               <li>If you don't have access to your Google Analytics, please send our team at SiteForward an email requesting access<br><small>Please include your Google Email in your request</small></li>
               <li>Open your Google Analytics Dashboard</li>
-              <li>Open your Events tab<br><small>Located under the Behaviour tab</small></li>
+              <li>Open your Events Overview tab<br><small>Located under the Behaviour tab</small></li>
             </ol>
           </div>
         </div>
