Added coming soon message

--- a/index.html
+++ b/index.html
@@ -492,6 +492,14 @@
           </div>
         </div>
 
+        <div id="tools" class="main-view" :class="{open: activeView === 'tools'}">
+          <div class="card">
+            <h3 class="card-title">Create a Banner Image</h3>
+            <p>Coming Soon</p>
+
+          </div>
+
+        </div>
 
         <div id="settings" class="main-view" :class="{open: activeView === 'settings'}">
           <div class="card">
